# FlowIQ

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
config/: headers.yaml  verbs.yaml
data/outputs/: sample_procedure_1_chunked_20260412_214710.txt  sample_procedure_1_chunked_20260414_062217.txt  sample_procedure_1_cleaned.txt  sample_procedure_1_cleaned_20260411_112718.txt  sample_procedure_1_cleaned_20260411_114748.txt  sample_procedure_1_cleaned_20260414_062217.txt
data/samples/: Sample Procedure 1.docx
docs/: architecture.md
src/: pipeline.py
src/chunking/: chunker.py
src/extraction/: extractor.py  llm_client.py  prompts.py
src/postprocessing/: rules.py
src/preprocessing/: cleaner.py
src/structuring/: parser.py
src/utils/: reader.py  writer.py
src/validation/: corrector.py  validator.py
tests/: conftest.py  test_chunker_chunking.py  test_chunker_decisions.py  test_chunker_headers.py  test_chunker_integration.py  test_chunker_microflows.py  test_cleaner.py  test_cleaner_bullets.py  test_cleaner_checklists.py  test_cleaner_integration.py  test_cleaner_linebreaks.py  test_cleaner_strip.py  test_cleaner_unicode.py  test_cleaner_url_toggle.py  test_cleaner_urls.py  test_cleaner_whitespace.py  test_reader.py  test_reader_cleaner.py
