
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FlowIQ"
version = "0.1.0"
description = "Process intelligence pipeline for extracting structured process models."
authors = [{ name = "Donnie Minnick" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-v"
